# Svitock

./: .clang-format  CMakeLists.txt  README.md
config/: server.yaml
src/: main.cpp
src/application/interfaces/: chat_repository.hpp  message_repository.hpp  user_repository.hpp
src/application/services/: realtime_dispatcher.hpp
src/application/use_cases/: create_chat_use_case.cpp  create_chat_use_case.hpp  get_chat_history_use_case.cpp  get_chat_history_use_case.hpp  login_user_use_case.cpp  login_user_use_case.hpp  register_user_use_case.cpp  register_user_use_case.hpp  send_message_use_case.cpp  send_message_use_case.hpp
src/core/actor/: actor.hpp  actor_message.hpp  actor_system.cpp  actor_system.hpp  mailbox.cpp  mailbox.hpp
src/core/config/: app_config.cpp  app_config.hpp
src/core/errors/: infrastructure_error.hpp
src/core/logging/: logger.cpp  logger.hpp
src/core/security/: jwt_service.cpp  jwt_service.hpp
src/core/threading/: thread_pool.cpp  thread_pool.hpp
src/domain/chat/: chat.cpp  chat.hpp
src/domain/message/: message.cpp  message.hpp
src/domain/user/: user.cpp  user.hpp
src/infrastructure/actors/: chat_actor.cpp  chat_actor.hpp  message_actor.cpp  message_actor.hpp  session_actor.cpp  session_actor.hpp  storage_actor.cpp  storage_actor.hpp
src/infrastructure/database/: postgres_pool.cpp  postgres_pool.hpp
src/infrastructure/dispatcher/: message_dispatcher.cpp  message_dispatcher.hpp
src/infrastructure/http/: http_server.cpp  http_server.hpp
src/infrastructure/network/: server.cpp  server.hpp
src/infrastructure/network/http/: http_listener.cpp  http_listener.hpp  http_router.cpp  http_router.hpp  http_session.cpp  http_session.hpp
src/infrastructure/network/websocket/: websocket_listener.cpp  websocket_listener.hpp  websocket_session.cpp  websocket_session.hpp
src/infrastructure/repositories/: postgres_chat_repository.cpp  postgres_chat_repository.hpp  postgres_message_repository.cpp  postgres_message_repository.hpp  postgres_user_repository.cpp  postgres_user_repository.hpp
src/infrastructure/websocket/: message_dispatcher.cpp  message_dispatcher.hpp  session_manager.cpp  session_manager.hpp  websocket_listener.cpp  websocket_listener.hpp  websocket_server.cpp  websocket_server.hpp  websocket_session.cpp  websocket_session.hpp
src/presentation/api/: api_router.cpp  api_router.hpp
src/presentation/controllers/: auth_controller.cpp  auth_controller.hpp  chat_controller.cpp  chat_controller.hpp  message_controller.cpp  message_controller.hpp
src/presentation/dto/: message_event_dto.hpp
